Parantez hatası düzeltildi

--- a/index.html
+++ b/index.html
@@ -112,11 +112,12 @@
             border: none;
             border-radius: 8px;
             cursor: pointer;
-   
+        }
 
         input[type="submit"]:hover {
-            /* background-color: #ff4e91; */
-        }
+    background-color: #ff4e91;
+}
+        
 
         footer {
             text-align: center;
