ilk site yüklendi

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     </header>
 
     <section class="image-text">
-        <!-- <img src="resimler/kedi.jpg" alt="Kediyi Bulamadın!" /> -->
+        <img src="resimler/kedi.jpg" alt="Kediyi Bulamadın!" /> 
         <div class="info-text">
             <h2>Bu benim ilk web sitem</h2>
             <p>HTML dilini öğreniyorum. Bu yüzden bu siteyi yapıyorum.</p>
